--- a/bower.json
+++ b/bower.json
@@ -23,12 +23,18 @@
         "dist/css/bootstrap-theme.css",
         "less/bootstrap.less"
       ]
+    },
+    "font-awesome": {
+      "main": [
+        "css/font-awesome.css"
+      ]
     }
   },
   "dependencies": {
     "angular": "1.5.1",
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.1",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "angular-ui-router": "0.3.1"
   }
 }
