--- a/bower.json
+++ b/bower.json
@@ -35,6 +35,8 @@
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.1",
     "font-awesome": "^4.7.0",
-    "angular-ui-router": "0.3.1"
+    "angular-ui-router": "0.3.1",
+    "moment": "^2.17.1",
+    "underscore": "^1.8.3"
   }
 }
