--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "express-session": "^1.14.2",
     "grunt": "^1.0.1",
     "q": "^1.4.1",
-    "socket.io": "^1.5.1",
-    "yo": "^1.8.5"
+    "socket.io": "^1.5.1"
   },
   "devDependencies": {
     "grunt-wiredep": "^3.0.1"
