--- a/public/app/mockData/tasks.json
+++ b/public/app/mockData/tasks.json
@@ -1,7 +1,17 @@
-{
-	"tasks": [
-		"T1",
-		"T2",
-		"T3"
-	]
-}
+[
+    { "name":"Task 1", "date":"12-25-2016","status":"Completed","value":20 },
+    { "name":"Task 2", "date":"12-25-2017","status":"Pending","value":50 },
+    { "name":"Task 3", "date":"01-25-2017","status":"Assigned","value":10 },
+    { "name":"Task 4", "date":"12-25-2016","status":"Pending","value":5 },
+    { "name":"Task 5", "date":"12-25-2016","status":"Assigned","value":80 },
+    { "name":"Task 6", "date":"12-25-2011","status":"Assigned","value":14 },
+    { "name":"Task 7", "date":"12-25-2018","status":"Pending","value":17 },
+    { "name":"Task 8", "date":"12-25-2016","status":"Completed","value":19 },
+    { "name":"Task 9", "date":"12-25-2017","status":"Completed","value":34 },
+    { "name":"Task 10", "date":"12-25-2016","status":"Completed","value":16 },
+    { "name":"Task 11", "date":"01-25-2017","status":"Pending","value":34 },
+    { "name":"Task 12", "date":"12-20-2016","status":"Completed","value":3 },
+    { "name":"Task 13", "date":"09-25-2016","status":"Assigned","value":10 },
+    { "name":"Task 14", "date":"10-25-2016","status":"Completed","value":9 },
+    { "name":"Task 15", "date":"11-25-2016","status":"Assigned","value":65 }
+]
