--- a/bower.json
+++ b/bower.json
@@ -37,6 +37,8 @@
     "font-awesome": "^4.7.0",
     "angular-ui-router": "0.3.1",
     "moment": "^2.17.1",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "chart.js": "^2.4.0",
+    "angular-chart.js": "^1.1.1"
   }
 }
