--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,11 @@
       "main": [
         "css/font-awesome.css"
       ]
+    },
+    "animate.css": {
+        "main": [
+            "animate.css""
+        ] 
     }
   },
   "dependencies": {
@@ -39,6 +44,7 @@
     "moment": "^2.17.1",
     "underscore": "^1.8.3",
     "chart.js": "^2.4.0",
-    "angular-chart.js": "^1.1.1"
+    "angular-chart.js": "^1.1.1",
+    "animate.css": "^3.5.2"
   }
 }
